--- a/puzzle.css
+++ b/puzzle.css
@@ -2,6 +2,7 @@
 	position: relative;
 	display: inline-block;
 	*display: block;
+	display: block;
 	max-width: 100%;
 	height: auto;
 	*float: left;
